feat: i adjusted the app to test the components and create a base structure

--- a/src/index.css
+++ b/src/index.css
@@ -1,12 +1,3 @@
-:root {
-  --primary-bg: #242526;
-  --secondary-bg: #fff;
-  --primary-text-color: #555;
-  --secondary-text-color: #cecece;
-  --border-radius: 8px;
-  --speed: 50ms;
-}
-
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -14,92 +5,10 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background-color: var(--primary-bg);
+  background-color: #242526;
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
-}
-
-ul {
-  list-style: none;
-}
-
-a {
-  text-decoration: none;
-  color: var(--primary-text-color);
-}
-
-.menu-trigger img {
-  position: absolute;
-  top: 20px;
-  right: 20px;
-  height: 60px;
-  width: 60px;
-  border-radius: 50%;
-  overflow: hidden;
-  cursor: pointer;
-}
-
-.dropdown-menu {
-  position: absolute;
-  top: 100px;
-  right: 20px;
-  background-color: #fff;
-  border-radius: var(--border-radius);
-  padding: 10px 20px;
-  width: 200px;
-}
-
-.dropdown-menu::before {
-  content: "";
-  position: absolute;
-  top: -5;
-  right: 20px;
-  height: 20px;
-  width: 20px;
-  background-color: var(--secondary-bg);
-  transform: rotate(45deg);
-}
-
-h3 {
-  width: 100%;
-  text-align: center;
-  font-size: 18px;
-  padding: 20px 0;
-  font-weight: 500;
-  color: var(--primary-text-color);
-  line-height: 1.2rem;
-}
-
-h3 span {
-  font-size: 14px;
-  color: var(--secondary-text-color);
-  font-weight: 400;
-}
-
-.dropdown-menu ul li {
-  padding: 10px 0;
-  border-top: 1px solid rgba(0, 0, 0, 0.05);
-  opacity: 1;
-  transform: translateY(-20);
-  transform: var(--speed);
-}
-
-.dropdown-menu ul li:hover a {
-  color: rgb(212, 33, 9);
-  cursor: pointer;
-}
-
-.dropdownItem {
-  display: flex;
-  margin: 10px auto;
-}
-
-.dropdownItem img {
-  max-width: 20px;
-  margin-right: 10px;
-  opacity: 0.5;
-  transition: var(--speed);
 }
